@@ -12,8 +12,8 @@ import yaml
 ##### Natural Resources Institute Finland (Luke)
 ##### This pipeline is build upon the the GBS-SNP-CROP pipeline:
 ##### https://github.com/halelab/GBS-SNP-CROP
-##### Version: 0.19.23
-version = "0.19.23"
+##### Version: 0.19.26
+version = "0.19.26"
 
 ##### set minimum snakemake version #####
 min_version("6.0")
