@@ -1,3 +1,4 @@
+rm *.out
 rm -rf BAM/
 rm -rf benchmark/
 rm -rf BWA/
@@ -8,9 +9,16 @@ rm -rf QC/
 rm -rf SAM/
 rm -rf FASTQ/CONCATENATED/
 rm -rf FASTQ/TRIMMED/
+rm -rf FASTQ/CUTADAPT/
 rm -rf VCF/
 rm -rf logs/
 rm -rf QUANTIFICATION/
 rm -rf Stringtie/
 rm -rf .snakemake/
 rm mockEvalReport.html
+rm References/full_inSilico_reference.fa*
+rm References/sizeSelected_inSilico_reference.fa*
+rm References/AB_contigs.txt
+rm barcodesID.txt
+rm IndexMockReferenceBWA.log
+rm -rf REPORTS/
